changed from portfolio to trip planner

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miranda Crawford | Trip Planner</title>
+    <title>Trip Planner | Comprehensive Travel Logistics</title>
     <style>
         :root {
             --primary: #2563eb;
@@ -25,113 +25,63 @@
             margin: 0 auto;
             padding: 2rem;
         }
-        header {
-            background-color: var(--white);
-            border-bottom: 1px solid #e2e8f0;
-            padding: 3rem 0;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-            color: var(--primary);
-            font-size: 2.5rem;
-        }
-        .intro {
+        .section {
             margin-top: 2rem;
             background: var(--white);
             padding: 2rem;
             border-radius: 8px;
             box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
-        .section {
-            margin-top: 2rem;
-        }
         h2 {
             border-bottom: 2px solid var(--primary);
             padding-bottom: 0.5rem;
             color: var(--text);
-        }
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            margin-top: 1rem;
-        }
-        .skill-item {
-            background: #e2e8f0;
-            padding: 0.75rem;
-            border-radius: 4px;
-            text-align: center;
-            font-weight: 500;
+            margin-top: 0;
         }
         .features-list {
-            background: var(--white);
-            padding: 2rem;
-            border-radius: 8px;
             margin-top: 1rem;
             border-left: 4px solid var(--primary);
+            padding-left: 1.5rem;
         }
         ul {
             padding-left: 1.5rem;
+            margin: 0;
         }
         li {
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
         }
-        footer {
-            text-align: center;
-            padding: 3rem 0;
-            color: var(--secondary);
-            font-size: 0.875rem;
+        strong {
+            color: var(--primary);
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Miranda Crawford</h1>
-            <p>Travel Innovation & Trip Planning</p>
-        </div>
-    </header>
-
     <div class="container">
-        <section class="intro">
-            <h2>About the Trip Planner</h2>
-            <p>
-                This trip planning website is a comprehensive tool designed to streamline the travel experience from inspiration to execution. It offers a dual approach: providing expertly suggested trips based on specific travel styles and offering a robust interface for users to build their own detailed itineraries.
-            </p>
-            <p>
-                By integrating logistical details with creative personalization, the platform ensures every aspect of a journey—from budget and activities to daily outfits and energy levels—is meticulously organized in one place.
-            </p>
-        </section>
-
         <section class="section">
-            <h2>Core Features</h2>
+            <h2>Trip Planner Overview</h2>
+            <p>
+                The Trip Planner is a specialized platform designed to centralize all aspects of travel organization. It provides a dual-functional environment where travelers can either explore pre-configured trip suggestions or engineer their own custom itineraries from the ground up.
+            </p>
+            
             <div class="features-list">
                 <ul>
-                    <li><strong>Intelligent Suggestions:</strong> Browse curated trips categorized by energy level and theme.</li>
-                    <li><strong>Custom Itinerary Builder:</strong> Detailed input for locations, activities, and time-specific plans.</li>
-                    <li><strong>Comprehensive Tracking:</strong> Manage budgets, food preferences, and even outfit suggestions for each day.</li>
-                    <li><strong>Interactive Mapping:</strong> Integrated maps with flagged restaurants, sights, and activity locations.</li>
-                    <li><strong>Trip Synchronization:</strong> Create a user account to save, modify, and revisit your plans at any time.</li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="section">
-            <h2>Website Interests</h2>
-            <div class="skills-grid">
-                <div class="skill-item">Itinerary Optimization</div>
-                <div class="skill-item">Budget Management</div>
-                <div class="skill-item">Map Integration</div>
-                <div class="skill-item">Activity Categorization</div>
-                <div class="skill-item">User Personalization</div>
-                <div class="skill-item">Visual Trip Planning</div>
-            </div>
-        </section>
-
-        <footer>
-            <p>&copy; 2024 Miranda Crawford - Trip Planning Innovation</p>
-        </footer>
-    </div>
-</body>
-</html>
+                    <li>
+                        <strong>Suggested Trips:</strong> A library of curated travel plans categorized by trip type, allowing users to quickly adopt proven itineraries for adventures, relaxation, or cultural exploration.
+                    </li>
+                    <li>
+                        <strong>Custom Trip Input:</strong> A robust planning engine for self-inputting specific trip details. This includes comprehensive data fields for:
+                        <ul>
+                            <li>Total and daily budgets</li>
+                            <li>Full itineraries and specific locations</li>
+                            <li>Planned activities and reservations</li>
+                            <li>Outfit planning and style coordination</li>
+                            <li>Food preferences and restaurant bookmarks</li>
+                            <li>Energy level tracking for pacing the journey</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Map Integration:</strong> A visual interface featuring map placement for all flagged locations, restaurants, and activities, providing a spatial overview of the entire journey.
+                    </li>
+                    <li>
+                        <strong>Persistence & Security:</strong> Integrated user accounts enable travelers to securely save, manage, and revisit multiple trips across various devices.
+                    </li>
